modify user account add display post id and link delete and modify post

--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -12,6 +12,8 @@
                 says:
                 <br>
                 {{ post.body }}
+                <br>
+                <p>Post Id: {{ post.id }}</p>
             </td>
         </tr>
     </table>
