--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -11,6 +11,8 @@
                 <p>{{ user.followers.count() }} followers, {{ user.followed.count() }} following.</p>
                 {% if user == current_user %}
                 <p><a href="{{ url_for('edit_profile') }}">Edit your profile</a></p>
+                <p><a href="{{ url_for('edit_profile') }}">Delete Post</a></p>
+                <p><a href="{{ url_for('edit_profile') }}">Modify Post</a></p>
                 {% elif not current_user.is_following(user) %}
                 <p><a href="{{ url_for('follow', username=user.username) }}">Follow</a></p>
                 {% else %}
